exports[`default`] = `
<div
  className="sc-ksYbfQ ksazEK">
  <div
    className="sc-TOsTZ kjYrri sc-cHGsZl cIlnlJ">
    <div
      className="sc-iwsKbI hAZHJM">
      <div
        className="sc-cJSrbW dLwzxs sc-kgAjT UBLRj"
        disabled={undefined}
        onClick={undefined}>
        <span
          className="sc-dnqmqq bDsesi">
          Inactive
        </span>
      </div>
      <div
        className="sc-cJSrbW dLwzxs sc-kgAjT gbqgFZ"
        disabled={undefined}
        onClick={undefined}>
        <span
          className="sc-dnqmqq bDsesi">
          Active
        </span>
      </div>
      <div
        className="sc-cJSrbW dLwzxs sc-kgAjT eqNkah"
        disabled={true}
        onClick={undefined}>
        <span
          className="sc-dnqmqq bDsesi">
          Disabled
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa bDWFJH">
      Content of active tab
    </div>
  </div>
</div>
`;

exports[`one item`] = `
<div
  className="sc-ksYbfQ ksazEK">
  <div
    className="sc-TOsTZ kjYrri sc-cHGsZl cIlnlJ">
    <div
      className="sc-iwsKbI hAZHJM">
      <div
        className="sc-cJSrbW dLwzxs sc-kgAjT gbqgFZ"
        disabled={undefined}
        onClick={undefined}>
        <span
          className="sc-dnqmqq bDsesi">
          Active
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa bDWFJH">
      Content of active tab
    </div>
  </div>
</div>
`;

exports[`rounded`] = `
<div
  className="sc-ksYbfQ ksazEK">
  <div
    className="sc-TOsTZ kjYrri sc-cHGsZl bjiDuV">
    <div
      className="sc-iwsKbI hAZHJM">
      <div
        className="sc-cJSrbW dLwzxs sc-kgAjT dsvEkW"
        disabled={undefined}
        onClick={undefined}>
        <span
          className="sc-dnqmqq bDsesi">
          Inactive
        </span>
      </div>
      <div
        className="sc-cJSrbW dLwzxs sc-kgAjT fOQkcJ"
        disabled={undefined}
        onClick={undefined}>
        <span
          className="sc-dnqmqq bDsesi">
          Active
        </span>
      </div>
      <div
        className="sc-cJSrbW dLwzxs sc-kgAjT boEEX"
        disabled={true}
        onClick={undefined}>
        <span
          className="sc-dnqmqq bDsesi">
          Disabled
        </span>
      </div>
    </div>
    <div
      className="sc-bdVaJa bDWFJH">
      Content of active tab
    </div>
  </div>
</div>
`;
